# controllers/users/Requests.go
@@ -1,5 +1,6 @@
 package users
 
 type NewUserRequest struct {
-	Name string `json:"name" example:"Paracetamol" gorm:"unique" binding:"required"`
+	Name        string `json:"name" example:"Bill" binding:"required"`
+	Coordinates string `json:"coordinates" example:"39.12355, 27.64538"  binding:"required"`
 }
