# swagger_gen/api/swagger.json
@@ -31,7 +31,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.User"
+                                "$ref": "#/definitions/model.User"
                             }
                         }
                     },
@@ -76,7 +76,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/model.User"
                         }
                     },
                     "400": {
@@ -114,7 +114,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/model.User"
                         }
                     },
                     "400": {
@@ -151,7 +151,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/model.User"
                         }
                     }
                 ],
@@ -191,7 +191,7 @@
         }
     },
     "definitions": {
-        "models.User": {
+        "model.User": {
             "type": "object",
             "properties": {
                 "coordinates": {
@@ -227,12 +227,17 @@
         "users.NewUserRequest": {
             "type": "object",
             "required": [
+                "coordinates",
                 "name"
             ],
             "properties": {
+                "coordinates": {
+                    "type": "string",
+                    "example": "39.12355, 27.64538"
+                },
                 "name": {
                     "type": "string",
-                    "example": "Paracetamol"
+                    "example": "Bill"
                 }
             }
         }
